# hexcurse-ng

./: README.md  configure.ac
include/: hex.h
man/: hexcurse.1
src/: acceptch.c  file.c  getopt.c  llist.c  screen.c
